# Ai_model_sdk

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: SDD.md
src/loan_restructuring_sdk/: __init__.py  sdk.py  stage1_pipeline.py
src/loan_restructuring_sdk/api/: __init__.py  dependencies.py  main.py
src/loan_restructuring_sdk/config/: __init__.py  logging_config.py  settings.py
src/loan_restructuring_sdk/extraction/: __init__.py  base.py  pdf_extraction_engine.py  prompts.py  salary_statement_builder.py
src/loan_restructuring_sdk/financial_calculator/: __init__.py  amortization_math.py  base.py  calculator.py
src/loan_restructuring_sdk/mapping/: __init__.py  base.py  case_mapper.py
src/loan_restructuring_sdk/models/: __init__.py  case_dto.py  domain.py  loan_calculation.py  priority.py  response.py  salary_statement.py  scenario.py  validation.py
src/loan_restructuring_sdk/ocr/: __init__.py  base.py  mistral_ocr_service.py
src/loan_restructuring_sdk/priority/: __init__.py  base.py  keyword_loader.py  priority_engine.py
src/loan_restructuring_sdk/response/: __init__.py  base.py  response_builder.py  stage1_base.py  stage1_response_builder.py
src/loan_restructuring_sdk/scenarios/: __init__.py  base.py  scenario_engine.py
src/loan_restructuring_sdk/utils/: __init__.py  datetime_utils.py  (+2 more)
src/mock_backend/: __init__.py  main.py  mock_data.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_sdk.py  test_stage1_pipeline.py  test_stage1_to_stage2_salary_handoff.py
(+43 files in other folders)
