[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loan-restructuring-sdk"
version = "0.1.0"
description = "AI-powered Loan Restructuring SDK for banks -- salary-statement extraction/validation, amortized restructuring scenarios, and case priority scoring."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/loan_restructuring_sdk", "src/mock_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
